# causaInf

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  causal_effect.py  conditional_probability.py  csv_transformer.py  lung.py  mini_script.py  multiple-adjustment-sets.txt  pyproject.toml  requisitos.txt  va
LUCAS-EXAMPLE/: lucas-graph.txt  lucas.csv  lucas_little.csv  toser_fatiga.txt
MONKEY_SURVEY/: data.csv  graph.txt  original_data.csv
csv/: correct_csv.csv  non-related.csv  non_data_with_0_treatment.csv  non_data_with_1_outcome.csv
dowhy/: causal_identifier.py
static/js/: ajax-calls.js  causal-effect-prompt.js  dagitty.js  error-prompt.js  main.js  options-prompt.js
static/styles/: dags.css
templates/: dags.html
