[tool.poetry]
name = "dagitty"
version = "0.1.0"
description = ""
authors = ["Victoria Beltrán"]

[tool.poetry.dependencies]
python = "^3.8"
dowhy = "^0.6"
Flask = "^2.0.1"
Flask-Session = "^0.3.2"
econml = "^0.11.1"
networkx = "^2.5.1"
sympy = "^1.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
